[ADD] Mouse Picking, Geometry Class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<canvas id="renderCanvas">Your browser is old. please fix this.</canvas>
+		<script src="js/geometry.js" charset="utf-8"></script>
 		<script src="js/entities.js" charset="utf-8"></script>
 		<script src="js/math.js" charset="utf-8"></script>
 		<script src="js/input.js" charset="utf-8"></script>
